--- a/DashboardIndex.html
+++ b/DashboardIndex.html
@@ -8,7 +8,6 @@
         body { font-family: 'Inter', sans-serif; background-color: #f7fafc; }
         .table-auto th, .table-auto td { padding: 8px 12px; border: 1px solid #e2e8f0; }
         
-        /* Converted from @apply to standard CSS for compatibility */
         .quick-range-btn {
             padding: 0.25rem 0.75rem; /* py-1 px-3 */
             font-size: 0.75rem; /* text-xs */
@@ -24,19 +23,6 @@
         }
         .quick-range-btn:hover {
             background-color: #bfdbfe; /* hover:bg-blue-200 */
-        }
-
-        .quick-range-container {
-            /* Container for the quick range buttons */
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.75rem; /* gap-3 */
-            align-items: center;
-            padding: 0.75rem; /* p-3 */
-            background-color: white;
-            border-radius: 0.5rem; /* rounded-lg */
-            border: 1px solid #e2e8f0; /* border-gray-200 */
-            box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.05); /* shadow-inner */
         }
     </style>
 </head>
@@ -88,7 +74,7 @@
 
                 <!-- Row 2: Quick Range Buttons -->
                 <div class="flex flex-col md:flex-row md:justify-between items-start md:items-center gap-4 pt-2">
-                    <div class="quick-range-container">
+                    <div class="flex text-center gap-3 p-3 bg-white rounded-lg border border-gray-200 shadow-inner">
                         <span class="text-sm font-medium text-gray-700 mr-1">Quick Date Ranges:</span>
                         <button type="button" class="quick-range-btn" data-range="thisWeek">This Week</button>
                         <button type="button" class="quick-range-btn" data-range="lastWeek">Last Week</button>
@@ -357,20 +343,34 @@
             
             breakdownData.forEach(classItem => {
                 html += `
-                    <div class="border border-gray-300 rounded-lg p-4 bg-white shadow-sm">
-                        <h3 class="text-lg font-semibold text-blue-700 mb-2">Class: ${classItem.className}</h3>
+                    <div class="border border-gray-300 rounded-lg p-4 bg-white shadow-md">
+                        <h3 class="text-lg font-semibold text-blue-700 mb-4">Class: ${classItem.className}</h3>
                         ${classItem.sessions.length > 0 
-                            ? `<ul class="list-disc ml-5 text-gray-700 space-y-2">
-                                ${classItem.sessions.map(s => `
-                                    <li>
-                                        <span class="font-medium">${s.module}</span>
-                                        <div class="text-sm text-gray-600 mt-0.5 ml-1">
-                                            <span class="font-semibold text-green-700">${s.students} students</span>
-                                            | Conducted by <span class="font-semibold text-purple-700">${s.coordinator}</span> on ${s.date}
-                                        </div>
-                                    </li>`).join('')}
-                               </ul>`
-                            : '<p class="text-gray-500">No sessions recorded for this class with the current filters.</p>'}
+                            ? `
+                            <div class="overflow-x-auto">
+                                <table class="min-w-full divide-y divide-gray-200 border border-gray-200 rounded-lg shadow-sm">
+                                    <thead class="bg-blue-50">
+                                        <tr>
+                                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-600 uppercase tracking-wider">Date</th>
+                                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-600 uppercase tracking-wider">Module</th>
+                                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-600 uppercase tracking-wider">Attendance</th>
+                                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-600 uppercase tracking-wider">Coordinator</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody class="bg-white divide-y divide-gray-100">
+                                        ${classItem.sessions.map(s => `
+                                            <tr>
+                                                <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-800">${s.date}</td>
+                                                <td class="px-4 py-2 text-sm text-gray-700">${s.module}</td>
+                                                <td class="px-4 py-2 whitespace-nowrap text-sm text-green-600 font-semibold">${s.students}</td>
+                                                <td class="px-4 py-2 whitespace-nowrap text-sm text-purple-700">${s.coordinator}</td>
+                                            </tr>
+                                        `).join('')}
+                                    </tbody>
+                                </table>
+                            </div>
+                            `
+                            : '<p class="text-gray-500 p-2">No sessions recorded for this class with the current filters.</p>'}
                     </div>
                 `;
             });
