--- a/DashboardIndex.html
+++ b/DashboardIndex.html
@@ -29,9 +29,23 @@
 <body class="p-4 sm:p-8 min-h-screen text-base">
 
     <div class="bg-white p-6 sm:p-8 rounded-xl shadow-2xl border border-gray-100 mx-auto w-full max-w-7xl">
-        
-        <h1 class="text-3xl font-bold text-gray-800 mb-2">Chetana Tracker Dashboard</h1>
-        <p class="text-gray-600 mb-6">Filter the session data and view reports.</p>
+        <!-- HEADER ROW: Logo (Left) and Title (Right & vertically centered) -->
+        <div class="flex justify-between items-center mb-6">
+            <!-- Logo (Left) -->
+            <div class="flex-shrink-0 mr-6"> 
+                <img src="https://drive.google.com/thumbnail?id=1FArQtL7K40Tyc-gU7UD-yjMw7GlwTumt" 
+                     alt="Chetana Tracker Logo" 
+                     style="height: 150px; max-width: 100%;" 
+                     class="block" 
+                     onerror="this.onerror=null; this.src='https://placehold.co/150x150/f0f9ff/000000?text=Logo+Unavailable'">
+            </div>
+
+            <!-- Title and Description (Right Horizontally and Center Vertically) -->
+            <div class="flex-1 min-w-0 text-right">
+                <h1 class="text-3xl font-bold text-gray-800 mb-2">Chetana Tracker Dashboard</h1>
+                <p class="text-gray-600">Filter the session data and view reports.</p>
+            </div>
+        </div>
 
         <!-- Status Message Box -->
         <div id="statusMessage" class="mt-4 p-4 rounded-lg text-lg hidden"></div>
