Adding DURATION column to the output report

--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
             border: 1px solid transparent; /* border-transparent */
             border-radius: 0.5rem;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.06); /* shadow-md */
-            font-weight: 500; /* font-medium */
+            font-size: 1.5rem;
+            font-weight: 600; /* font-medium */
             color: white; /* text-white */
             background-color: #2563eb; /* bg-blue-600 */
             transition: background-color 0.3s; /* transition duration-300 */
